--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,7 @@ layout: default
 
 <!-- Topics, Required Content, Exercises, Supplementary Content -->
 
+{{ page.date | date: "%B %-d, %Y" }}
+
 {{ content }}
 
